@@ -1,3 +1,4 @@
+#!/usr/bin/perl
 #
 # $Header$
 #
@@ -7,7 +8,7 @@
 # 	- rm
 #########################
 
-use Gtk2::TestHelper tests => 55;
+use Gtk2::TestHelper tests => 57;
 
 ok( my $menubar = Gtk2::MenuBar->new );
 
@@ -128,6 +129,18 @@ unless ($i_know_you) {
 	foreach (0 .. 3) {
 		ok (TRUE, 'faking pos. callback');
 	}
+}
+
+SKIP: {
+	skip 'new 2.14 stuff', 2
+		unless Gtk2->CHECK_VERSION(2, 13, 6); # FIXME: 2.14
+
+	my $menu = Gtk2::Menu->new;
+	$menu->set_accel_path ('<gtk2perl>/main/menu');
+	is ($menu->get_accel_path, '<gtk2perl>/main/menu');
+
+	$menu->set_monitor (0);
+	is ($menu->get_monitor, 0);
 }
 
 __END__
